--- a/index.html
+++ b/index.html
@@ -2,12 +2,62 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
+    <title>Flexbox Challenge 4</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <div class="section__intro">
+        <div class="container">
+            <p>
+            l o r e m i p s u m s i t
+            </p>
+            <h1>Responsive layouts don’t have to be a struggle</h1>
+        </div>
+    </div>
+    <div class="section__main">
+        <div class="container">
+            <h2>Quality Designs</h2>
+            <div class=" section__content">
+                <div><p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore
+                    magna aliqua. Dui vivamus arcu felis bibendum ut
+                    tristique. Arcu dui vivamus arcu felis. Sociis natoque
+                    penatibus et magnis dis.
+                </p></div>
+                <div><p>
+                    Felis donec et odio pellentesque diam volutpat. Aliquam
+                    purus sit amet luctus venenatis. Turpis in eu mi
+                    bibendum neque egestas congue quisque egestas.
+                    Pellentesque sit amet porttitor eget dolor morbi non.
+                </p></div>
+            </div>
+        </div>
+    </div>
+    <div class="section__secondary ">
+        <div class="container section__content">
+            <div class="section__text"><h2>Made custom for you</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Ut enim ad minim veniam.</p></div>
+            <div class="section__image"><img src="img/image-01.jpg" alt="picture of a person in a mountain"></div>
+        </div>
+    </div>
+    <div class="section__footer ">
+        <div class="container section__content">
+            <div class="section__image" ><img src="img/image-02.jpg"   alt="picture of sunset and mountains"></div>
+            <div class="section__text">
+                <h2>Created with care</h2>
+                <p>Felis donec et odio pellentesque diam volutpat. Aliquam
+                purus sit amet luctus venenatis. Turpis in eu mi
+                bibendum neque egestas congue quisque egestas.
+                Pellentesque sit amet porttitor eget dolor morbi non.</p>
+            </div>
+        </div>
+    </div>
   </body>
 </html>
